--- a/ServletMentorship/src/main/webapp/WEB-INF/web.xml
+++ b/ServletMentorship/src/main/webapp/WEB-INF/web.xml
@@ -51,8 +51,6 @@
     <filter-mapping>
         <filter-name>LoggingFilterName</filter-name>
         <url-pattern>/*</url-pattern>
-        <!--<servlet-name>LoginServlet</servlet-name>-->
-        <!--<dispatcher>REQUEST</dispatcher>-->
     </filter-mapping>
 
     <filter>
@@ -64,6 +62,33 @@
         <url-pattern>/*</url-pattern>
         <!--<servlet-name>LoginServlet</servlet-name>-->
         <!--<dispatcher>REQUEST</dispatcher>-->
+    </filter-mapping>
+
+    <servlet>
+        <servlet-name>LoginServletName</servlet-name>
+        <servlet-class>com.mentorship.servlet.LoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LoginServletName</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>LogoutServletName</servlet-name>
+        <servlet-class>com.mentorship.servlet.LogoutServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LogoutServletName</servlet-name>
+        <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+
+    <filter>
+        <filter-name>AuthenticationFilterName</filter-name>
+        <filter-class>com.mentorship.filter.AuthenticationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AuthenticationFilterName</filter-name>
+        <url-pattern>/subjects</url-pattern>
     </filter-mapping>
 </web-app>
         
