--- a/SpringHibernateMentorship/src/main/webapp/WEB-INF/web.xml
+++ b/SpringHibernateMentorship/src/main/webapp/WEB-INF/web.xml
@@ -1,47 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  Licensed to the Apache Software Foundation (ASF) under one or more
-  contributor license agreements.  See the NOTICE file distributed with
-  this work for additional information regarding copyright ownership.
-  The ASF licenses this file to You under the Apache License, Version 2.0
-  (the "License"); you may not use this file except in compliance with
-  the License.  You may obtain a copy of the License at
 
-      http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
-
-<!--
-  - This is the Cocoon web-app configurations file
-  -
-  - $Id$
-  -->
 <web-app version="2.4"
          xmlns="http://java.sun.com/xml/ns/j2ee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+		  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
     <servlet>
-        <servlet-name>StudentServletName</servlet-name>
-        <servlet-class>com.mentorship.servlet.StudentServlet</servlet-class>
+        <servlet-name>DispatcherServletName</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>/WEB-INF/spring/context.xml</param-value>
+        </init-param>
     </servlet>
-    <servlet-mapping>
-        <servlet-name>StudentServletName</servlet-name>
-        <url-pattern>/home/students</url-pattern>
-    </servlet-mapping>
 
-    <servlet>
-        <servlet-name>SubjectServletName</servlet-name>
-        <servlet-class>com.mentorship.servlet.SubjectServlet</servlet-class>
-    </servlet>
+    <!--<context-param>-->
+        <!--<param-name>contextConfigLocation</param-name>-->
+        <!--<param-value>/WEB-INF/root-context.xml</param-value>-->
+    <!--</context-param>-->
+
     <servlet-mapping>
-        <servlet-name>SubjectServletName</servlet-name>
-        <url-pattern>/home/subjects</url-pattern>
+        <servlet-name>DispatcherServletName</servlet-name>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
     <filter>
@@ -63,24 +44,6 @@
         <!--<servlet-name>LoginServlet</servlet-name>-->
         <!--<dispatcher>REQUEST</dispatcher>-->
     </filter-mapping>
-
-    <servlet>
-        <servlet-name>LoginServletName</servlet-name>
-        <servlet-class>com.mentorship.servlet.LoginServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>LoginServletName</servlet-name>
-        <url-pattern>/login</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>LogoutServletName</servlet-name>
-        <servlet-class>com.mentorship.servlet.LogoutServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>LogoutServletName</servlet-name>
-        <url-pattern>/logout</url-pattern>
-    </servlet-mapping>
 
     <filter>
         <filter-name>AuthenticationFilterName</filter-name>
