--- a/SpringHibernateMentorship/src/main/webapp/WEB-INF/web.xml
+++ b/SpringHibernateMentorship/src/main/webapp/WEB-INF/web.xml
@@ -15,41 +15,45 @@
         </init-param>
     </servlet>
 
-    <!--<context-param>-->
-        <!--<param-name>contextConfigLocation</param-name>-->
-        <!--<param-value>/WEB-INF/root-context.xml</param-value>-->
-    <!--</context-param>-->
-
     <servlet-mapping>
         <servlet-name>DispatcherServletName</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
-    <filter>
-        <filter-name>LoggingFilterName</filter-name>
-        <filter-class>com.mentorship.filter.LoggingFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>LoggingFilterName</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    <!--<filter>-->
+        <!--<filter-name>LoggingFilterName</filter-name>-->
+        <!--<filter-class>com.mentorship.filter.LoggingFilter</filter-class>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>LoggingFilterName</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+    <!--</filter-mapping>-->
+
+    <!--<filter>-->
+        <!--<filter-name>EncodingFilterName</filter-name>-->
+        <!--<filter-class>com.mentorship.filter.EncodingFilter</filter-class>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>EncodingFilterName</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+    <!--</filter-mapping>-->
+
+    <!--<filter>-->
+        <!--<filter-name>AuthenticationFilterName</filter-name>-->
+        <!--<filter-class>com.mentorship.filter.AuthenticationFilter</filter-class>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>AuthenticationFilterName</filter-name>-->
+        <!--<url-pattern>/home/*</url-pattern>-->
+    <!--</filter-mapping>-->
 
     <filter>
-        <filter-name>EncodingFilterName</filter-name>
-        <filter-class>com.mentorship.filter.EncodingFilter</filter-class>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
     <filter-mapping>
-        <filter-name>EncodingFilterName</filter-name>
+        <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
-
-    <filter>
-        <filter-name>AuthenticationFilterName</filter-name>
-        <filter-class>com.mentorship.filter.AuthenticationFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>AuthenticationFilterName</filter-name>
-        <url-pattern>/home/*</url-pattern>
     </filter-mapping>
 </web-app>
         
